--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,8 @@
 {
     "/user/js/app.js": "/user/js/app.js",
     "/user/css/app.css": "/user/css/app.css",
-    "/user/js/host.js": "/user/js/host.js",
+    "/user/js/host/detail.js": "/user/js/host/detail.js",
+    "/user/js/host/index.js": "/user/js/host/index.js",
     "/user/js/room.js": "/user/js/room.js",
     "/user/js/service.js": "/user/js/service.js"
 }
