--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@goongmaps/goong-geocoder": "^1.0.7",
+        "@goongmaps/goong-js": "^1.0.2",
         "@openfonts/muli_vietnamese": "^1.0.1",
+        "es6-promise": "^4.2.8",
         "filepond": "^4.13.5",
         "filepond-plugin-file-poster": "^2.2.0",
         "filepond-plugin-image-preview": "^4.6.2",
