--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "flatpickr": "^4.6.3",
         "font-awesome": "^4.7.0",
         "jszip": "^3.4.0",
-        "pdfmake": "^0.1.65"
+        "pdfmake": "^0.1.65",
+        "tata-js": "^0.1.5"
     }
 }
