--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,13 @@
 {
     "/frontend/js/app.js": "/frontend/js/app.js",
-    "/frontend/css/app.css": "/frontend/css/app.css"
+    "/user/js/app.js": "/user/js/app.js",
+    "/user/css/app.css": "/user/css/app.css",
+    "/frontend/css/app.css": "/frontend/css/app.css",
+    "/user/js/contract/index.js": "/user/js/contract/index.js",
+    "/user/js/host/detail.js": "/user/js/host/detail.js",
+    "/user/js/host/index.js": "/user/js/host/index.js",
+    "/user/js/invoice/index.js": "/user/js/invoice/index.js",
+    "/user/js/profile/show.js": "/user/js/profile/show.js",
+    "/user/js/room/index.js": "/user/js/room/index.js",
+    "/user/js/service/index.js": "/user/js/service/index.js"
 }
