--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/frontend/js/RoomArticle/detail.js": "/frontend/js/RoomArticle/detail.js",
     "/frontend/js/RoomArticle/search.js": "/frontend/js/RoomArticle/search.js",
     "/frontend/js/app.js": "/frontend/js/app.js",
+    "/frontend/js/index/index.js": "/frontend/js/index/index.js",
     "/user/admin/menu/index.js": "/user/admin/menu/index.js",
     "/user/admin/place/index.js": "/user/admin/place/index.js",
     "/user/js/app.js": "/user/js/app.js",
