adding users and articles admin managing

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,8 +3,10 @@
     "/frontend/js/RoomArticle/search.js": "/frontend/js/RoomArticle/search.js",
     "/frontend/js/app.js": "/frontend/js/app.js",
     "/frontend/js/index/index.js": "/frontend/js/index/index.js",
+    "/user/admin/articles/index.js": "/user/admin/articles/index.js",
     "/user/admin/menu/index.js": "/user/admin/menu/index.js",
     "/user/admin/place/index.js": "/user/admin/place/index.js",
+    "/user/admin/users/index.js": "/user/admin/users/index.js",
     "/user/js/app.js": "/user/js/app.js",
     "/user/css/app.css": "/user/css/app.css",
     "/frontend/css/app.css": "/frontend/css/app.css",
